# ml26_Gurts

./: pyproject.toml
src/ml26/: example.py
src/ml26/E00_RL/: Johana_q_learning.py  q_learning.py
src/ml26/E02_Intro/: Gabriel_Intro_a_jupyter_notebook copy.ipynb  Gabriel_Intro_a_numpy.ipynb  Intro_a_jupyter_notebook_jp.ipynb  Intro_a_jupyter_notebook_sol.ipynb  Intro_a_numpy.ipynb  Intro_a_numpy_sol.ipynb  Johana_Intro_a_jupyter_notebook copy 2.ipynb  Johana_Intro_a_numpy.ipynb  Sergio_Intro_a_jupyter_notebook.ipynb  Sergio_Intro_a_numpy.ipynb
src/ml26/E03_LinearReg/: gradient_descent_gabriel.ipynb  gradient_descent_johana.ipynb  gradient_descent_sergio.ipynb  linear_regression_gabriel.ipynb  linear_regression_johana.ipynb  linear_regression_sergio.ipynb
src/ml26/E04_LogisticReg/: logistic_regression.ipynb
src/ml26/E06_mlp_reg/: mlp_reg.ipynb  mlp_reg_sol.ipynb  test_preds.csv
src/ml26/E07_mlp_class/: mlp_class.ipynb
src/ml26/E08_cnns/: cnn_classifier.ipynb
